Fix? For bot not restarting.